<resources>
    <string name="app_name">BookShelf</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_sort">Sort</string>
    <string name="action_arrow">arrow</string>
    <string name="batchAdd">批量扫描</string>
    <string name="singleAdd">单次扫描</string>
    <string name="writeAdd">手动添加</string>
    <string name="drawer_item_about">关于</string>
    <string name="drawer_item_books">书籍</string>
    <string name="drawer_item_create_new_label">添加新标签</string>
    <string name="drawer_item_search">搜索</string>
    <string name="drawer_item_settings">设置</string>
    <string name="drawer_section_label">标签</string>
    <string name="drawer_item_donate">捐赠</string>
    <string name="label_add_new_dialog_edit_text">输入新的标签的名称</string>


    <string name="author">作者</string>

    <string name="publish">出版社</string>

    <string name="time">出版时间</string>

    <string name="isbn">ISBN</string>

    <string name="title">标题</string>

    <string name="save">保存</string>
    <string name="retu">返回</string>
    <string name="text_isbn">ISBN：</string>
    <string name="text_time">出版时间：</string>
    <string name="text_publish">出版社：</string>
    <string name="text_author">作者：</string>
    <string name="text_title">标题：</string>
    <string name="writeISBN">输入ISBN</string>
</resources>
