<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_arrow"
        android:actionLayout="@layout/spinner"
        android:icon="@drawable/sharp_arrow_drop_down_24"
        android:orderInCategory="100"
        android:title="@string/action_arrow"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/baseline_search_24"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:showAsAction="always"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/baseline_sort_24"
        android:orderInCategory="100"
        android:title="@string/action_sort"
        app:showAsAction="always"/>

    <item
        android:id="@+id/rename_bookshelf"
        android:icon="@drawable/baseline_more_vert_white_36"
        android:orderInCategory="100"
        android:title="重命名书架"
        app:showAsAction="never" />
    <item
        android:id="@+id/delete_bookshelf"
        android:icon="@drawable/baseline_more_vert_white_36"
        android:orderInCategory="100"
        android:title="删除书架"
        app:showAsAction="never" />
</menu>
