<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_main" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/baseline_add_white_18" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:visibility="invisible"
        app:srcCompat="@drawable/baseline_clear_white_18" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/batchAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="80dp"
        android:visibility="invisible"
        app:srcCompat="@drawable/baseline_edit_white_18"
        app:fabSize="mini"/>

    <Button
        android:id="@+id/batchAdd1"
        android:text="@string/batchAdd"
        android:textColor="@color/colorWhite"
        android:background="@color/colorGray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="60dp"
        android:visibility="invisible"
        android:layout_marginBottom="75dp"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/singleAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="130dp"
        android:visibility="invisible"
        app:srcCompat="@drawable/baseline_edit_white_18"
        app:fabSize="mini"/>

    <Button
        android:id="@+id/singleAdd1"
        android:text="@string/singleAdd"
        android:background="@color/colorGray"
        android:textColor="@color/colorWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginRight="60dp"
        android:visibility="invisible"
        android:layout_marginBottom="125dp"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/writeAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="180dp"
        android:visibility="invisible"
        app:srcCompat="@drawable/baseline_edit_white_18"
        app:fabSize="mini"/>

    <Button
        android:id="@+id/writeAdd1"
        android:text="@string/writeAdd"
        android:background="@color/colorGray"
        android:textColor="@color/colorWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginRight="60dp"
        android:visibility="invisible"
        android:layout_marginBottom="175dp"/>

</android.support.design.widget.CoordinatorLayout>